--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_splash_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Created by Rodrigo Novoa"
+        android:text="@string/splash_text"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
