--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -3,17 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:paddingLeft="20dp"
     android:background="@color/dog3_color_1">
 
     <TextView
         android:id="@+id/tv_activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CONFIGURATION"
+        android:text="@string/data_title"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/viga"
         android:textSize="30dp"
-        android:textColor="@color/dog3_color_3"
-        android:textStyle="bold"/>
+        android:textColor="@color/dog3_color_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="DATA"
+            android:text="@string/data_data_title"
             android:layout_marginLeft="10dp"
             android:textColor="@color/dog3_color_3"/>
 
@@ -42,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:text="Username: " />
+        android:text="@string/data_data_username" />
 
     <TextView
         android:id="@+id/tv_facts"
@@ -50,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="Facts: " />
+        android:text="@string/data_data_facts" />
 
     <TextView
         android:id="@+id/tv_favs"
@@ -58,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="Favorite Facts: " />
+        android:text="@string/data_data_favorite_facts" />
 
     <TextView
         android:id="@+id/tv_shareds"
@@ -66,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="Times Shared: " />
+        android:text="@string/data_data_times_shared" />
 
     <TextView
         android:id="@+id/tv_opened"
@@ -74,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="App Opened Times: " />
+        android:text="@string/data_data_opened_times" />
 
 
     <LinearLayout
@@ -92,7 +93,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OPTIONS"
+            android:text="@string/data_options_title"
             android:layout_marginLeft="10dp"
             android:textColor="@color/dog3_color_3"/>
 
@@ -109,7 +110,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Skip SplashScreen"
+            android:text="@string/data_options_skip_splashscreen"
             android:layout_marginLeft="10dp" />
 
 
@@ -139,7 +140,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Username"
+            android:text="@string/data_options_change_username"
             android:layout_marginLeft="10dp"/>
 
         <ImageView
@@ -166,7 +167,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ABOUT US"
+            android:text="@string/data_aboutus_title"
             android:layout_marginLeft="10dp"
             android:textColor="@color/dog3_color_3"/>
 
@@ -183,7 +184,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contact E-mail"
+            android:text="@string/data_aboutus_contact_email"
             android:layout_marginLeft="10dp"/>
 
 
@@ -198,7 +199,7 @@
             android:id="@+id/tv_contactEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="rodrigo.novoa.apps@hotmail.com"
+            android:text="@string/data_aboutus_contact_email_content"
             android:layout_marginLeft="10dp"
             android:visibility="invisible"/>
 
@@ -214,7 +215,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About this APP"
+            android:text="@string/data_aboutus_about_app"
             android:layout_marginLeft="10dp"/>
 
 
