--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,11 +13,12 @@
         android:id="@+id/tv_activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Did you know this fact...?"
-        android:textSize="30dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:textColor="@color/dog1_color_2" />
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/viga"
+        android:text="@string/home_title"
+        android:textColor="@color/dog1_color_2"
+        android:textSize="30dp" />
 
     <include
         android:layout_width="wrap_content"
