--- a/app/src/main/res/layout/dialog_enter_username.xml
+++ b/app/src/main/res/layout/dialog_enter_username.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="textStart"
         android:textSize="16dp"
-        android:text="@string/username_dialog_enter_username" />
+        android:text="ENTER YOUR USERNAME:" />
 
     <EditText
         android:id="@+id/edt_username"
@@ -19,7 +19,8 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_title" />
+        android:layout_below="@id/tv_title"
+        android:hint="Name"/>
 
     <Button
         android:id="@+id/btn_continue"
