--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -3,18 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="20dp"
+    android:padding="20dp"
     android:background="@color/dog3_color_1">
 
     <TextView
         android:id="@+id/tv_activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/data_title"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/viga"
+        android:text="CONFIGURATION"
         android:textSize="30dp"
-        android:textColor="@color/dog3_color_3" />
+        android:textColor="@color/dog3_color_3"
+        android:textStyle="bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_data_title"
+            android:text="DATA"
             android:layout_marginLeft="10dp"
             android:textColor="@color/dog3_color_3"/>
 
@@ -43,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:text="@string/data_data_username" />
+        android:text="Username: " />
 
     <TextView
         android:id="@+id/tv_facts"
@@ -51,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="@string/data_data_facts" />
+        android:text="Facts: " />
 
     <TextView
         android:id="@+id/tv_favs"
@@ -59,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="@string/data_data_favorite_facts" />
+        android:text="Favorite Facts: " />
 
     <TextView
         android:id="@+id/tv_shareds"
@@ -67,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="@string/data_data_times_shared" />
+        android:text="Times Shared: " />
 
     <TextView
         android:id="@+id/tv_opened"
@@ -75,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="@string/data_data_opened_times" />
+        android:text="App Opened Times: " />
 
 
     <LinearLayout
@@ -93,7 +92,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_options_title"
+            android:text="OPTIONS"
             android:layout_marginLeft="10dp"
             android:textColor="@color/dog3_color_3"/>
 
@@ -110,7 +109,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_options_skip_splashscreen"
+            android:text="Skip SplashScreen"
             android:layout_marginLeft="10dp" />
 
 
@@ -140,7 +139,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_options_change_username"
+            android:text="Change Username"
             android:layout_marginLeft="10dp"/>
 
         <ImageView
@@ -167,7 +166,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_aboutus_title"
+            android:text="ABOUT US"
             android:layout_marginLeft="10dp"
             android:textColor="@color/dog3_color_3"/>
 
@@ -184,7 +183,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_aboutus_contact_email"
+            android:text="Contact E-mail"
             android:layout_marginLeft="10dp"/>
 
 
@@ -199,7 +198,7 @@
             android:id="@+id/tv_contactEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_aboutus_contact_email_content"
+            android:text="rodrigo.novoa.apps@hotmail.com"
             android:layout_marginLeft="10dp"
             android:visibility="invisible"/>
 
@@ -215,7 +214,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_aboutus_about_app"
+            android:text="About this APP"
             android:layout_marginLeft="10dp"/>
 
 
