--- a/app/src/main/res/layout/card_fact.xml
+++ b/app/src/main/res/layout/card_fact.xml
@@ -5,16 +5,30 @@
     android:padding="10dp">
 
 
+    <ImageView
+        android:id="@+id/imv_dog_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxWidth="150dp"
+        android:maxHeight="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:adjustViewBounds="true"
+        android:padding="5dp"
+        android:background="@drawable/dog3_dialogue_box"/>
+
+
     <RelativeLayout
         android:id="@+id/rl_fact"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imv_dog_image">
 
         <TextView
             android:id="@+id/tv_fact_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:textColor="@android:color/white"
             android:padding="50dp"
             android:layout_marginBottom="20dp"
